--- a/index.html
+++ b/index.html
@@ -2,112 +2,278 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>송금 통화 비교 계산기</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>송금 통화 비교 계산기 — Pro</title>
+  <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    body { font-family: Arial, sans-serif; background: #f0f4ff; padding: 20px; }
-    .container { max-width: 800px; margin: auto; background: #fff; padding: 20px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
-    h1 { font-size: 24px; margin-bottom: 10px; }
-    .rates, .inputs, .result { margin: 20px 0; }
-    .card { display: inline-block; width: 30%; margin-right: 2%; background: #f9f9f9; padding: 15px; border-radius: 8px; text-align: center; }
-    .card:last-child { margin-right: 0; }
-    .card h3 { margin: 0 0 10px; }
-    input { width: 80%; padding: 8px; font-size: 16px; margin-bottom: 10px; }
-    button { padding: 10px 20px; background: #4f46e5; color: white; border: none; border-radius: 6px; cursor: pointer; }
-    button:disabled { background: #999; }
-    .error { color: red; margin-top: 10px; }
+    /* Card hover */
+    .card-raise { transition: transform .25s ease, box-shadow .25s ease; }
+    .card-raise:hover { transform: translateY(-2px); box-shadow: 0 10px 24px rgba(0,0,0,0.12); }
+    /* Subtle gradient text */
+    .grad-text { background: linear-gradient(90deg,#4f46e5,#06b6d4); -webkit-background-clip: text; background-clip: text; color: transparent; }
+    /* Number rolling */
+    .odometer { font-variant-numeric: tabular-nums; }
   </style>
 </head>
-<body>
-  <div class="container">
-    <h1>송금 통화 비교 계산기</h1>
-    <button id="refreshBtn">환율 갱신</button>
-    <div id="lastUpdate"></div>
-    <div id="error" class="error"></div>
+<body class="min-h-screen bg-gradient-to-br from-indigo-50 via-sky-50 to-cyan-50 selection:bg-indigo-200/60">
+  <div class="max-w-6xl mx-auto px-4 py-8">
+    <!-- HEADER -->
+    <header class="flex flex-col md:flex-row gap-4 md:items-center md:justify-between mb-6">
+      <div>
+        <h1 class="text-3xl md:text-4xl font-extrabold tracking-tight grad-text">송금 통화 비교 계산기</h1>
+        <p class="text-slate-600 mt-1">USD · CNY · CAD — 어떤 통화가 가장 유리한지 한눈에 비교</p>
+      </div>
+      <div class="flex items-center gap-2">
+        <button id="refreshBtn" class="inline-flex items-center gap-2 rounded-xl bg-indigo-600 text-white px-4 py-2 font-semibold shadow card-raise">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12a9 9 0 1 1-3-6.7"/><path d="M21 3v6h-6"/></svg>
+          환율 갱신
+        </button>
+        <label class="flex items-center gap-2 text-sm px-3 py-2 rounded-xl bg-white shadow-sm border">
+          <input id="autoRefresh" type="checkbox" class="scale-110 accent-indigo-600">
+          3분마다 자동 갱신
+        </label>
+      </div>
+    </header>
 
-    <div class="rates">
-      <div class="card"><h3>USD</h3><div id="usdRate">-</div></div>
-      <div class="card"><h3>CNY</h3><div id="cnyRate">-</div></div>
-      <div class="card"><h3>CAD</h3><div id="cadRate">-</div></div>
+    <!-- STATUS STRIP -->
+    <div class="flex flex-wrap items-center gap-3 text-xs md:text-sm text-slate-600 mb-6">
+      <div id="sourceBadge" class="rounded-full bg-white border px-3 py-1 shadow-sm">소스: -</div>
+      <div id="lastUpdate" class="rounded-full bg-white border px-3 py-1 shadow-sm">업데이트: -</div>
+      <div class="rounded-full bg-white border px-3 py-1 shadow-sm">마진: <span id="marginVal">2</span>%</div>
+      <div id="toast" class="hidden text-emerald-700 bg-emerald-50 border border-emerald-200 rounded-full px-3 py-1">환율이 갱신되었습니다</div>
     </div>
 
-    <div class="inputs">
-      <div class="card">
-        <h3>USD 입력</h3>
-        <input type="number" id="usdInput" placeholder="금액" />
-        <div id="usdKrw"></div>
+    <!-- RATE CARDS -->
+    <section class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-8">
+      <div class="card-raise rounded-2xl bg-white border shadow p-5">
+        <div class="flex items-center justify-between mb-2">
+          <div class="text-slate-500 text-sm">미국 달러</div>
+          <span class="text-xs font-semibold rounded-full bg-indigo-100 text-indigo-700 px-2 py-0.5">USD</span>
+        </div>
+        <div id="usdRate" class="odometer text-3xl font-extrabold text-indigo-700">-</div>
+        <div class="text-xs text-slate-500 mt-1">1 USD 당 원화</div>
       </div>
-      <div class="card">
-        <h3>CNY 입력</h3>
-        <input type="number" id="cnyInput" placeholder="금액" />
-        <div id="cnyKrw"></div>
+      <div class="card-raise rounded-2xl bg-white border shadow p-5">
+        <div class="flex items-center justify-between mb-2">
+          <div class="text-slate-500 text-sm">중국 위안화</div>
+          <span class="text-xs font-semibold rounded-full bg-cyan-100 text-cyan-700 px-2 py-0.5">CNY</span>
+        </div>
+        <div id="cnyRate" class="odometer text-3xl font-extrabold text-cyan-700">-</div>
+        <div class="text-xs text-slate-500 mt-1">1 CNY 당 원화</div>
       </div>
-      <div class="card">
-        <h3>CAD 입력</h3>
-        <input type="number" id="cadInput" placeholder="금액" />
-        <div id="cadKrw"></div>
+      <div class="card-raise rounded-2xl bg-white border shadow p-5">
+        <div class="flex items-center justify-between mb-2">
+          <div class="text-slate-500 text-sm">캐나다 달러</div>
+          <span class="text-xs font-semibold rounded-full bg-teal-100 text-teal-700 px-2 py-0.5">CAD</span>
+        </div>
+        <div id="cadRate" class="odometer text-3xl font-extrabold text-teal-700">-</div>
+        <div class="text-xs text-slate-500 mt-1">1 CAD 당 원화</div>
       </div>
-    </div>
+    </section>
 
-    <div class="result" id="result"></div>
+    <!-- CONTROLS -->
+    <section class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-10">
+      <div class="rounded-2xl bg-white border shadow p-5">
+        <label class="block text-sm text-slate-600 mb-2">USD 견적</label>
+        <input id="usdInput" type="number" inputmode="decimal" placeholder="0.00" class="w-full rounded-lg border px-3 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-300" />
+        <div class="mt-2 text-sm text-slate-500">원화 환산</div>
+        <div id="usdKrw" class="text-2xl font-bold text-indigo-700">-</div>
+      </div>
+      <div class="rounded-2xl bg-white border shadow p-5">
+        <label class="block text-sm text-slate-600 mb-2">CNY 견적</label>
+        <input id="cnyInput" type="number" inputmode="decimal" placeholder="0.00" class="w-full rounded-lg border px-3 py-2 focus:outline-none focus:ring-2 focus:ring-cyan-300" />
+        <div class="mt-2 text-sm text-slate-500">원화 환산</div>
+        <div id="cnyKrw" class="text-2xl font-bold text-cyan-700">-</div>
+      </div>
+      <div class="rounded-2xl bg-white border shadow p-5">
+        <label class="block text-sm text-slate-600 mb-2">CAD 견적</label>
+        <input id="cadInput" type="number" inputmode="decimal" placeholder="0.00" class="w-full rounded-lg border px-3 py-2 focus:outline-none focus:ring-2 focus:ring-teal-300" />
+        <div class="mt-2 text-sm text-slate-500">원화 환산</div>
+        <div id="cadKrw" class="text-2xl font-bold text-teal-700">-</div>
+      </div>
+    </section>
+
+    <!-- RESULT -->
+    <section id="resultWrap" class="hidden rounded-2xl bg-white border shadow p-6 mb-10">
+      <div class="flex items-center gap-2 mb-4">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-emerald-600" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 6L9 17l-5-5"/></svg>
+        <h2 class="text-xl font-bold text-slate-800">송금 통화 비교 결과</h2>
+      </div>
+      <div id="comparisonList" class="space-y-3"></div>
+      <div class="mt-6 grid grid-cols-1 md:grid-cols-3 gap-4">
+        <div class="rounded-xl border bg-emerald-50 text-emerald-800 p-4">
+          <div class="text-xs">최저가 통화</div>
+          <div id="cheapest" class="text-2xl font-extrabold">-</div>
+        </div>
+        <div class="rounded-xl border bg-amber-50 text-amber-800 p-4">
+          <div class="text-xs">최고가 대비 추가 비용</div>
+          <div id="extraCost" class="text-2xl font-extrabold">-</div>
+        </div>
+        <div class="rounded-xl border bg-indigo-50 text-indigo-800 p-4">
+          <div class="text-xs">최대 절감 가능 금액</div>
+          <div id="maxSave" class="text-2xl font-extrabold">-</div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="text-center text-xs text-slate-500">※ 환율은 실시간 기준에 송금 스프레드(기본 2%) 반영. 실제 은행 환율/수수료는 상이할 수 있습니다.</footer>
   </div>
 
   <script>
-    const margin = 1.02; // 2% 마진
+    // ===== Config =====
+    const DEFAULT_MARGIN = 0.02; // 2%
+    const REFRESH_MS = 180000;   // 3m
+    const TIMEOUT_MS = 7000;
+
+    // ===== State =====
+    let marginMultiplier = 1 + DEFAULT_MARGIN;
     let rates = { USD: 0, CNY: 0, CAD: 0 };
+    let autoTimer = null;
+
+    // ===== Helpers =====
+    const fmtWon = (n) => '₩' + Math.round(n).toLocaleString();
+    const fmtRate = (n) => '₩' + (Math.round(n)).toLocaleString();
+
+    const withTimeout = (promiseFactory, ms) => new Promise((resolve, reject) => {
+      const t = setTimeout(() => reject(new Error('timeout')), ms);
+      promiseFactory()
+        .then(v => { clearTimeout(t); resolve(v); })
+        .catch(e => { clearTimeout(t); reject(e); });
+    });
+
+    const providers = [
+      async (signal) => {
+        const u = `https://api.exchangerate.host/latest?base=KRW&symbols=USD,CNY,CAD&_=${Date.now()}`;
+        const r = await fetch(u, { signal, cache: 'no-store' });
+        if (!r.ok) throw new Error('exchangerate.host');
+        const d = await r.json();
+        return { provider: 'exchangerate.host', rates: d.rates };
+      },
+      async (signal) => {
+        const u = `https://open.er-api.com/v6/latest/KRW?_=${Date.now()}`;
+        const r = await fetch(u, { signal, cache: 'no-store' });
+        if (!r.ok) throw new Error('open.er-api');
+        const d = await r.json();
+        if (d.result !== 'success') throw new Error('erapi-bad');
+        return { provider: 'open.er-api.com', rates: { USD: d.rates.USD, CNY: d.rates.CNY, CAD: d.rates.CAD } };
+      },
+      async (signal) => {
+        const u = `https://api.frankfurter.app/latest?from=KRW&to=USD,CNY,CAD&_=${Date.now()}`;
+        const r = await fetch(u, { signal, cache: 'no-store' });
+        if (!r.ok) throw new Error('frankfurter');
+        const d = await r.json();
+        return { provider: 'frankfurter.app', rates: d.rates };
+      }
+    ];
+
+    const invertToKrwPerUnit = (baseKrwRates) => ({
+      USD: (1 / baseKrwRates.USD) * marginMultiplier,
+      CNY: (1 / baseKrwRates.CNY) * marginMultiplier,
+      CAD: (1 / baseKrwRates.CAD) * marginMultiplier,
+    });
+
+    const setRateCards = () => {
+      document.getElementById('usdRate').textContent = rates.USD ? fmtRate(rates.USD) : '-';
+      document.getElementById('cnyRate').textContent = rates.CNY ? fmtRate(rates.CNY) : '-';
+      document.getElementById('cadRate').textContent = rates.CAD ? fmtRate(rates.CAD) : '-';
+    };
+
+    const setStatus = (provider) => {
+      document.getElementById('sourceBadge').textContent = `소스: ${provider}`;
+      document.getElementById('lastUpdate').textContent = `업데이트: ${new Date().toLocaleString('ko-KR')}`;
+      const toast = document.getElementById('toast');
+      toast.classList.remove('hidden');
+      setTimeout(() => toast.classList.add('hidden'), 1500);
+    };
 
     async function fetchRates() {
-      document.getElementById('error').textContent = '';
-      try {
-        const res = await fetch('https://open.er-api.com/v6/latest/KRW');
-        if (!res.ok) throw new Error('HTTP error');
-        const data = await res.json();
-        const usd = Math.round((1 / data.rates.USD) * margin);
-        const cny = Math.round((1 / data.rates.CNY) * margin);
-        const cad = Math.round((1 / data.rates.CAD) * margin);
-        rates = { USD: usd, CNY: cny, CAD: cad };
-        document.getElementById('usdRate').textContent = '₩' + usd;
-        document.getElementById('cnyRate').textContent = '₩' + cny;
-        document.getElementById('cadRate').textContent = '₩' + cad;
-        document.getElementById('lastUpdate').textContent = '업데이트: ' + new Date().toLocaleString();
-      } catch (e) {
-        console.error(e);
-        document.getElementById('error').textContent = '환율 정보를 가져오지 못했습니다.';
-        rates = { USD: 1330, CNY: 187, CAD: 980 };
+      document.getElementById('toast').classList.add('hidden');
+      let lastErr = null;
+      const controller = new AbortController();
+      for (const p of providers) {
+        try {
+          const payload = await withTimeout(() => p(controller.signal), TIMEOUT_MS);
+          const next = invertToKrwPerUnit(payload.rates);
+          if (!isFinite(next.USD) || !isFinite(next.CNY) || !isFinite(next.CAD)) throw new Error('bad computed');
+          rates = {
+            USD: Math.round(next.USD),
+            CNY: Math.round(next.CNY),
+            CAD: Math.round(next.CAD),
+          };
+          setRateCards();
+          setStatus(payload.provider);
+          recalc();
+          return;
+        } catch (e) {
+          lastErr = e;
+        }
       }
+      console.error('FX failed:', lastErr);
+      rates = { USD: 1330, CNY: 187, CAD: 980 }; // fallback
+      setRateCards();
+      setStatus('fallback');
+      recalc();
     }
 
-    function calc() {
+    const recalc = () => {
       const usdAmt = parseFloat(document.getElementById('usdInput').value) || 0;
       const cnyAmt = parseFloat(document.getElementById('cnyInput').value) || 0;
       const cadAmt = parseFloat(document.getElementById('cadInput').value) || 0;
       const usdKrw = usdAmt * rates.USD;
       const cnyKrw = cnyAmt * rates.CNY;
       const cadKrw = cadAmt * rates.CAD;
-      document.getElementById('usdKrw').textContent = usdAmt ? '₩' + usdKrw.toLocaleString() : '';
-      document.getElementById('cnyKrw').textContent = cnyAmt ? '₩' + cnyKrw.toLocaleString() : '';
-      document.getElementById('cadKrw').textContent = cadAmt ? '₩' + cadKrw.toLocaleString() : '';
 
-      const results = [
-        { cur: 'USD', val: usdKrw },
-        { cur: 'CNY', val: cnyKrw },
-        { cur: 'CAD', val: cadKrw }
-      ].filter(r => r.val > 0).sort((a,b) => a.val - b.val);
+      document.getElementById('usdKrw').textContent = usdAmt ? fmtWon(usdKrw) : '-';
+      document.getElementById('cnyKrw').textContent = cnyAmt ? fmtWon(cnyKrw) : '-';
+      document.getElementById('cadKrw').textContent = cadAmt ? fmtWon(cadKrw) : '-';
 
-      if (results.length >= 2) {
-        const cheapest = results[0];
-        const diff = results[results.length - 1].val - cheapest.val;
-        document.getElementById('result').innerHTML = `<b>${cheapest.cur}</b> 송금이 가장 유리합니다.<br>최대 절감: ₩${diff.toLocaleString()}`;
+      const items = [
+        { cur: 'USD', val: usdKrw, color: 'text-indigo-700', bar: 'bg-indigo-200' },
+        { cur: 'CNY', val: cnyKrw, color: 'text-cyan-700', bar: 'bg-cyan-200' },
+        { cur: 'CAD', val: cadKrw, color: 'text-teal-700', bar: 'bg-teal-200' },
+      ].filter(x => x.val > 0).sort((a,b) => a.val - b.val);
+
+      const wrap = document.getElementById('resultWrap');
+      const list = document.getElementById('comparisonList');
+      if (items.length >= 2) {
+        wrap.classList.remove('hidden');
+        list.innerHTML = '';
+        const min = items[0].val; const max = items[items.length-1].val;
+        items.forEach((it, idx) => {
+          const pct = max > 0 ? Math.round((it.val / max) * 100) : 0;
+          const row = document.createElement('div');
+          row.className = 'rounded-xl border p-4';
+          row.innerHTML = `
+            <div class="flex items-center justify-between mb-2">
+              <div class="text-sm text-slate-600">${idx+1}. ${it.cur}</div>
+              <div class="text-lg font-bold ${it.color}">${fmtWon(it.val)}</div>
+            </div>
+            <div class="w-full h-2 rounded-full bg-slate-100 overflow-hidden">
+              <div class="h-2 ${it.bar}" style="width:${pct}%;"></div>
+            </div>`;
+          list.appendChild(row);
+        });
+        document.getElementById('cheapest').textContent = items[0].cur;
+        document.getElementById('extraCost').textContent = fmtWon(max - min);
+        document.getElementById('maxSave').textContent = fmtWon(max - min);
       } else {
-        document.getElementById('result').textContent = '';
+        wrap.classList.add('hidden');
       }
-    }
+    };
 
+    // ===== Events =====
     document.getElementById('refreshBtn').addEventListener('click', fetchRates);
-    document.getElementById('usdInput').addEventListener('input', calc);
-    document.getElementById('cnyInput').addEventListener('input', calc);
-    document.getElementById('cadInput').addEventListener('input', calc);
+    ['usdInput','cnyInput','cadInput'].forEach(id => document.getElementById(id).addEventListener('input', recalc));
+    document.getElementById('autoRefresh').addEventListener('change', (e) => {
+      if (e.target.checked) {
+        autoTimer = setInterval(fetchRates, REFRESH_MS);
+      } else if (autoTimer) {
+        clearInterval(autoTimer); autoTimer = null;
+      }
+    });
 
+    // Init
+    document.getElementById('marginVal').textContent = Math.round(DEFAULT_MARGIN*100);
     fetchRates();
   </script>
 </body>
